fix:配置修改